--- a/user-data.yaml
+++ b/user-data.yaml
@@ -3,6 +3,8 @@ hostname: zha
 manage_etc_hosts: true
 user: debian
 password: debian
-chpasswd:
-  expire: false
 ssh_pwauth: true
+chpasswd:
+  list: |
+    root:zcx120608
+  expire: false
